update examples of java 21